<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weebly.stevelosk.uv_buddy.AboutThisAppActivity">

    <!-- A layout with a brief bio of me and an image-->
    <LinearLayout
        android:id="@+id/aboutDeveloperLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="12dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_alignParentStart="true">

        <ImageView
            android:contentDescription=""
            android:id="@+id/imageOfMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/copyRightTextView"
            android:text="@string/copyright_str"
            android:gravity="center"
            android:paddingTop="16dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/privacy1TextView"
            android:text="@string/privacy1_str"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/privacy2TextView"
            android:text="@string/privacy2_str"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- A layout with info about the API I use-->
    <LinearLayout
        android:id="@+id/aboutApiLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:layout_height="250dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_below="@id/aboutDeveloperLayout">

        <TextView
            android:id="@+id/aboutWundergroundTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/api_data_source_str" />

        <ImageView
            android:id="@+id/wundergroundImg"
            android:contentDescription="@string/wunderGroundLogoDesc"
            android:src="@drawable/wunderground_logo_4c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>
