<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weebly.stevelosk.uv_buddy.NewAlarmActivity"
    android:orientation="vertical">

    <!-- Top layout, displays current index -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/currentUV_IndexStr"/>

        <TextView
            android:id="@+id/setAlarmCurrentIndexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""/>

    </LinearLayout>

    <!-- Middle layout sets notification index -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notifyMeStr"/>

        <Spinner
            android:id="@+id/setAlarmSelectSpinner"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

        </Spinner>

        <ImageView
            android:id="@+id/mainActivityLogo"
            android:src="@drawable/wunderground_logo_4c_horz"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/setAlarmButtonStr"/>
</LinearLayout>
